feat(engine): add console as data source