@@ -24,11 +24,6 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-        </plugins>
-    </build>
-
     <profiles>
         <profile>
             <id>native</id>
@@ -37,18 +32,40 @@
                     <plugin>
                         <groupId>org.graalvm.buildtools</groupId>
                         <artifactId>native-maven-plugin</artifactId>
-                        <version>${native.maven.plugin.version}</version>
+                        <version>0.10.3</version>
                         <extensions>true</extensions>
                         <configuration>
+                            <imageName>barrage</imageName>
                             <mainClass>com.barrage.cli.Main</mainClass>
+                            <buildArgs>
+                                <arg>-H:+UnlockExperimentalVMOptions</arg>
+                                <arg>-H:+SharedArenaSupport</arg>
+                                <arg>-H:+ForeignAPISupport</arg>
+
+                                <arg>--enable-native-access=ALL-UNNAMED</arg>
+                                <arg>-O4</arg>
+
+                                <arg>--initialize-at-run-time=com.barrage.protocol.HTTP.HttpMessage,com.barrage.kernel.io.NativeSocket,com.barrage.engine.ServerEngine</arg>
+
+                                <arg>--no-fallback</arg>
+                            </buildArgs>
                         </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-shade-plugin</artifactId>
+                        <version>3.5.1</version>
                         <executions>
                             <execution>
-                                <id>build-native</id>
-                                <goals>
-                                    <goal>compile-no-fork</goal>
-                                </goals>
                                 <phase>package</phase>
+                                <goals><goal>shade</goal></goals>
+                                <configuration>
+                                    <transformers>
+                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                            <mainClass>com.barrage.cli.Main</mainClass>
+                                        </transformer>
+                                    </transformers>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
@@ -56,5 +73,4 @@
             </build>
         </profile>
     </profiles>
-
 </project>
